# ConstructIQ

./: .env.example  .gitignore  README.md  pyproject.toml  queries.sql
backend/: create_user.py  get_admin_user.py  main.py
backend/core/: security.py
backend/database/: db.py
backend/models/: bricks_expenses.py  cement_expenses.py  civil_contract.py  electric_expenses.py  labour_expenses.py  painting_expenses.py  plumbing_expenses.py  sand_expenses.py  site_expenses.py  steel_expenses.py  stone_expenses.py  user.py
backend/repositories/: user_repo.py
backend/routers/: auth.py  bricks_expenses.py  bulk_load.py  cement_expenses.py  civil_contract.py  crud_operations.py  dashboard.py  electric_expenses.py  labour_expenses.py  painting_expenses.py  plumbing_expenses.py  sand_expenses.py  signup.py  site_expenses.py  steel_expenses.py  stone_expenses.py
backend/schemas/: bricks_expenses_schema.py  cement_expenses_schema.py  civil_contract_schema.py  electric_expenses_schema.py  labour_expenses_schema.py  painting_expenses_schema.py  plumbing_expenses_schema.py  sand_expenses_schema.py  site_expenses_schema.py  steel_expenses_schema.py  stone_expenses_schema.py
backend/services/: auth_service.py  bricks_expenses_service.py  cement_expenses_service.py  civil_contract_service.py  electric_expenses_service.py  (+7 more)
frontend/: app copy.py  app.py  requirements.txt
sample/: bricks_sample.csv  cement_sample.csv  electric_sample.csv  labour_sample.csv  painting_sample.csv  plumbing_sample.csv  sand.csv  site_expenses_sample.csv  steel.csv  stone.csv
(+25 files in other folders)
