[project]
name = "constructiq"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.12",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.50",
    "streamlit>=1.58.0",
    "uvicorn>=0.49.0",
]
